# Customer_Churn_Project

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Makefile  README.md  compose.yaml  dvc.yaml  main.py  pyproject.toml  render.yaml  requirements.txt  test_local.sh
.github/workflows/: cd.yaml  ci.yaml  keep-alive.yaml
catboost_info/: catboost_training.json
catboost_info/learn/: events.out.tfevents
configs/: data.yaml  model.yaml  train.yaml
data/: synthetic_customers.csv
data/processed/: cleaner.joblib  model.joblib  preprocessor.joblib
docker/: dockerfile.app  dockerfile.train
src/: __init__.py
src/data/: __init__.py  make_dataset.py  split_dataset.py
src/features/: build_features.py  telco_cleaner.py
src/models/: __init__.py  evaluate.py  predict.py  register.py  save_model.py  train.py
src/serving/: __init__.py  api.py
src/ui/: app.py
src/utils/: __init__.py  io.py  logging.py  mlflow_utils.py  paths.py
tests/: test_features.py
