
[tool.poetry]
name = "Customer_churn_project"
version = "0.1.0"
description = "Telco Customer Churn — MLOps (Hydra, DVC, MLflow, Optuna, Docker, FastAPI, Streamlit)"
authors = ["souleymane SALL <sallsouleymane2207@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "src" }]


[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^2.0.0"
scikit-learn = "^1.5.0"
lightgbm = "^4.4.0"
xgboost = "^2.1.1"
catboost = "^1.2.5"
imbalanced-learn = "^0.12.3"
pyyaml = "^6.0.2"
hydra-core = "^1.3.2"
mlflow = "^2.16.0"
optuna = "^3.6.1"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
python-dotenv = "^1.0.1"
joblib = "^1.4.2"
loguru = "^0.7.2"
matplotlib = "^3.9.2"
shap = "^0.46.0"
dvc = {version = "^3.63.0", extras = ["s3"]}
kaggle = "^1.7.4.5"
streamlit = "^1.50.0"
psycopg2-binary = "^2.9.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
black = "^24.8.0"
ruff = "^0.6.3"
isort = "^5.13.2"
mypy = "^1.11.2"
pre-commit = "^3.8.0"


[tool.black]
line-length = 100
target-version = ["py311"]


[tool.isort]
profile = "black"
line_length = 100


[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP", "N", "ANN", "C90"]
ignore = ["ANN101", "ANN102"]


[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
strict_optional = true


[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
